--- a/backend/package.json
+++ b/backend/package.json
@@ -5,12 +5,16 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "db:generate": "npx prisma generate",
+    "db:migrate": "npx prisma migrate",
+    "serve": "nodemon src/index.js",
     "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.13.0",
     "bcrypt": "^5.1.1",
     "express": "^4.19.2",
     "joi": "^17.13.0",
@@ -22,8 +26,11 @@
     "@babel/preset-env": "^7.24.4",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/supertest": "^6.0.2",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
-    "prisma": "^5.13.0"
+    "nodemon": "^3.1.0",
+    "prisma": "^5.13.0",
+    "supertest": "^7.0.0"
   }
 }
