--- a/backend/package.json
+++ b/backend/package.json
@@ -7,30 +7,27 @@
   "scripts": {
     "db:generate": "npx prisma generate",
     "db:migrate": "npx prisma migrate",
-    "serve": "nodemon src/index.js",
-    "test": "jest"
+    "serve": "nodemon src/index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": {
+    "name": "Yoviar Pauzi",
+    "email": "yoviarpauzi99@gmail.com"
+  },
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.13.0",
     "bcrypt": "^5.1.1",
     "express": "^4.19.2",
     "joi": "^17.13.0",
+    "nanoid": "^5.0.7",
     "uuid": "^9.0.1",
     "winston": "^3.13.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.24.4",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
-    "@types/supertest": "^6.0.2",
-    "babel-jest": "^29.7.0",
-    "jest": "^29.7.0",
+    "@types/joi": "^17.2.3",
     "nodemon": "^3.1.0",
-    "prisma": "^5.13.0",
-    "supertest": "^7.0.0"
+    "prisma": "^5.13.0"
   }
 }
