--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.14.0",
     "bcrypt": "^5.1.1",
     "express": "^4.19.2",
     "joi": "^17.13.0",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/joi": "^17.2.3",
+    "dotenv": "^16.4.5",
     "nodemon": "^3.1.0",
     "prisma": "^5.13.0"
   }
