--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,15 @@
   "main": "index.js",
   "scripts": {
     "db:generate": "npx prisma generate",
-    "db:migrate": "npx prisma migrate",
-    "serve": "nodemon src/index.js"
+    "db:migrate": "npx prisma migrate dev",
+    "db:migrate-create-only": "npx prisma migrate dev --create-only",
+    "serve": "nodemon src/index.js",
+    "test": "jest"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    }
   },
   "keywords": [],
   "author": {
@@ -19,17 +26,22 @@
     "@prisma/client": "^5.14.0",
     "bcrypt": "^5.1.1",
     "express": "^4.19.2",
-    "joi": "^17.13.0",
-    "nanoid": "^5.0.7",
-    "uuid": "^9.0.1",
+    "joi": "^17.13.1",
+    "jsonwebtoken": "^9.0.2",
     "winston": "^3.13.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.6",
+    "@babel/preset-env": "^7.24.6",
     "@types/express": "^4.17.21",
-    "@types/joi": "^17.2.3",
+    "@types/jest": "^29.5.12",
+    "@types/supertest": "^6.0.2",
+    "babel-jest": "^29.7.0",
     "dotenv": "^16.4.5",
-    "nodemon": "^3.1.0",
-    "prisma": "^5.13.0"
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.1",
+    "prisma": "^5.14.0",
+    "supertest": "^7.0.0"
   }
 }
