--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,16 +11,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.6.0",
     "@reduxjs/toolkit": "^2.2.3",
+    "@vitejs/plugin-react": "^4.2.1",
+    "axios": "^1.7.2",
+    "js-cookie": "^3.0.5",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
     "react-icons": "^5.1.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.23.0",
+    "react-toastify": "^10.0.5",
+    "vite": "^5.2.11",
     "vite-plugin-compression": "^0.5.1",
-    "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.2.11"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
