--- a/backend/package.json
+++ b/backend/package.json
@@ -23,8 +23,10 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@joi/date": "^2.1.1",
     "@prisma/client": "^5.14.0",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "joi": "^17.13.1",
     "multer": "^1.4.5-lts.1",
