--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.1.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.23.0",
+    "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
     "vite": "^5.2.11",
     "vite-plugin-compression": "^0.5.1",
