--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.2.3",
     "@vitejs/plugin-react": "^4.2.1",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "js-cookie": "^3.0.5",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
