--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.23.0",
     "react-select": "^5.8.0",
+    "react-social-icons": "^6.16.0",
     "react-toastify": "^10.0.5",
     "vite": "^5.2.11",
     "vite-plugin-compression": "^0.5.1",
